<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/_8sdp"
          android:text="@string/account_holder">

      </TextView>

    <EditText
        android:id="@+id/acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_number"
        android:drawableTint="@color/grey"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="13"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:background="@drawable/textview_xml"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"


        >
    </EditText>
    <EditText
        android:id="@+id/cnic_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cnic"
        android:drawableTint="@color/grey"
        android:background="@drawable/textview_xml"
        android:digits="0123456789-"
        android:inputType="number"
        android:maxLength="15"
        android:singleLine="true"
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">

    </EditText>

    <EditText
        android:id="@+id/calender_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob"
        android:drawableTint="@color/grey"
        android:background="@drawable/textview_xml"
        android:drawableStart="@drawable/ic_baseline_cake_24"
        android:drawableEnd="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
android:focusableInTouchMode="false"
        android:clickable="true"
        android:focusable="false"
        android:padding="@dimen/_10sdp">

    </EditText>

    <EditText
        android:id="@+id/ed_Carrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carrier"
        android:drawableTint="@color/red"
        android:background="@drawable/textview_xml"
        android:focusable="false"
        android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"

        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:drawableStart="@drawable/ic_baseline_mobile_friendly_24"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/textview_xml"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">

    </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAllCaps="false"

            android:layout_marginTop="@dimen/_51sdp"
            android:background="@drawable/button"
>

        </Button>    </LinearLayout>
</FrameLayout>