<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"

    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/red"
        >


        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

    </RelativeLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red">

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cardview_two"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:cardCornerRadius="30dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/card_back">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_20sdp"
                    android:background="@drawable/alfa_image"
                    app:layout_constraintBottom_toBottomOf="parent">


                </ImageView>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/textview_xml"
                    android:drawableStart="@drawable/ic_baseline_supervised_user_circle_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/username_case_sensitive"
android:maxLength="2"
                    android:inputType="text"
                    android:digits="abc@!%#"
                    android:text="d"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp">

                </EditText>

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/textview_xml"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp">

                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:paddingRight="@dimen/_20sdp"
                    android:text="@string/forgot_credentials"
                    android:textColor="@color/red" />


                <android.widget.Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_centerInParent="true"
                        android:background="@color/grey"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@color/white"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:text="@string/or" />


                </RelativeLayout>


                <android.widget.Button
                    android:id="@+id/reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_70sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@drawable/button_register"
                    android:text="@string/register_now"
                    android:textAllCaps="false"
                    android:textColor="@color/red" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_gravity="center"


                    android:background="@color/grey" />


            </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>