<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_one"
    tools:context=".Fragment_one">


<!-- TODO: Update blank fragment layout -->

<LinearLayout
    android:id="@+id/frag_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:text="@string/debit_card">

    </TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    >
    <EditText
        android:id="@+id/db_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_xml"
        android:drawableTint="@color/grey"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"




        >
    </EditText>

    <EditText
        android:id="@+id/db_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_xml"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"


        android:layout_marginTop="@dimen/_10sdp"




        >
    </EditText>

    <EditText
        android:id="@+id/db_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/textview_xml"
        android:layout_marginTop="@dimen/_10sdp"




        >
    </EditText>

    <EditText
        android:id="@+id/db_4"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/textview_xml"
        android:layout_marginTop="@dimen/_10sdp"




        >
    </EditText>
</LinearLayout>
    <EditText
        android:id="@+id/cnic_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cnic"
        android:drawableTint="@color/grey"
        android:background="@drawable/textview_xml"
        android:digits="0123456789-"
        android:maxLength="15"
        android:inputType="number"
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_8sdp">

    </EditText>

    <EditText
        android:id="@+id/calender_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dob"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:clickable="true"
        android:drawableTint="@color/grey"
        android:background="@drawable/textview_xml"
        android:drawableStart="@drawable/ic_baseline_cake_24"
        android:drawableEnd="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:padding="@dimen/_8sdp">

    </EditText>

    <EditText
        android:id="@+id/ed_Carrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Carrier"
        android:drawableTint="@color/red"
        android:background="@drawable/textview_xml"
        android:focusable="false"
        android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"

        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp">

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mobile Number"
        android:drawableStart="@drawable/ic_baseline_mobile_friendly_24"
        android:background="@drawable/textview_xml"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_8sdp">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"

        android:layout_marginTop="@dimen/_51sdp"
        android:background="@drawable/button"
        >

    </Button>    </LinearLayout>
</FrameLayout>