<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".ForgotCredentialsActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="80dp"

        android:layout_marginRight="@dimen/_25sdp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_20sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cont3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_90sdp">


            <TextView
                android:id="@+id/textViewS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:gravity="center"
                android:text="select_registration_source"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.176">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_90sdp"
                    android:layout_marginBottom="@dimen/_100sdp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_baseline_person_outline_24"
                    android:gravity="center"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/account"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img"
                    app:layout_constraintVertical_bias="0.151">

                </TextView>

                <TextView
                    android:id="@+id/textViewA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_90sdp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_baseline_account_balance_wallet_24"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="Wallet"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewU"
                    app:layout_constraintHorizontal_bias="0.812"
                    app:layout_constraintStart_toStartOf="@+id/textViewV"
                    app:layout_constraintTop_toTopOf="@+id/img1"
                    app:layout_constraintVertical_bias="0.36">

                </TextView>

                <TextView
                    android:id="@+id/textView_U"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_90sdp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_baseline_house_siding_24"
                    android:gravity="center"
                    android:padding="@dimen/_7sdp"
                    android:text="Other Bank**"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img"
                    app:layout_constraintVertical_bias="0.151">

                </TextView>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_395sdp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        tools:layout_editor_absoluteY="336dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_321sdp"
            android:layout_marginBottom="@dimen/_56sdp"
            android:text="*Bank Alfalah Account, Credit/Debit Card or orbit \n*Other Bank Credit/Debit Card"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp">


        <ImageView
            android:id="@+id/back_arrow_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_credentials_"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/back_arrow_forgot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529">

        </TextView>

        <ImageView
            android:id="@+id/home_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_16sdp"


            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/ic_home"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_230sdp">

        <ImageView
            android:id="@+id/img_Lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_lock_24"
            android:padding="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.548">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_160sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/did_you_forget_your_login_id_or_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>